--- a/debian/install
+++ b/debian/install
@@ -1,3 +1,3 @@
 src/* opt/soon/
-utils/.env opt/soon/
+utils/soon_post_installation_configurator.py opt/soon/
 utils/soon.service lib/systemd/system/
